<resources>
    <string name="app_name">Guess The Number</string>
    <string name="start_game">Start game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="version">DNAS Software \u00AE version</string>
    <string name="game_by_babarusi_cristian">A game for <b>KIDS</b> by Băbăruși Cristian</string>
    <string name="demo_version_x_x_xx">demo version x.x.xx</string>
    <string name="game_mode_selection">Game Mode Selection</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="please_select_game_mode">Please select a game mode in order to play</string>
    <string name="demo_dialog_text_text_text">Demo dialog text text text</string>
    <string name="robot_say_hi_there">Hi there.
        \nDo you know what number I have now in my robotic mind?
        \nCan you guess it?
        \nIs a number from 1 to</string>
    <string name="yes_i_can">Yeah, I will guess it</string>
    <string name="no_i_cant">Neh, I\'m not a magician</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="your_number_here">Your number here</string>
    <string name="abandon">Abandon</string>
    <string name="backspace_unicode">\u232B Del</string>
    <string name="demo_attempts_0">Demo Attempts: 0</string>

    <string name="attempts">Attempts:</string>
    <string name="ohh_start_with_zero">Ohh, your number start with zero.</string>
    <string name="is_not_valid"> is not valid, please correct it.</string>
    <string name="zero_no">Zero? No, my number is from 1 to</string>
    <string name="you_did_not_enter_number">Hey, what is this? You did not enter any number.</string>
    <string name="no_is_not">No, is not</string>
    <string name="my_num_is_bigger">. My number is bigger then this.</string>
    <string name="my_num_is_smaller">. My number is smaller then this.</string>
    <string name="yupii_yes">Yupii. Yes,</string>
    <string name="is_my_num">is my number. Congratulations.
    \n\nDo you want to play again?</string>
    <string name="demo_show_gamemode">Game mode: DEMO</string>
    <string name="show_easy_gamemode_selection">Game mode: EASY</string>
    <string name="show_medium_gamemode_selection">Game mode: MEDIUM</string>
    <string name="show_hard_gamemode_selection">Game mode: HARD</string>
    <string name="wow_no_no_no">Woow. No, no, no …</string>
    <string name="the">The</string>
    <string name="is_huge_num">it\'s too big. My number is from 1 to</string>
    <string name="demo_current_games_played_demo">Games played: DEMO</string>
    <string name="guess">Guess</string>
    <string name="current_games_played">Current games:</string>
    <string name="one_more_time">Yeah, one more time</string>
    <string name="go_back">Nope, I\'m going back</string>
    <string name="attempts_point">attempts.</string>
    <string name="you_ve_guessed">You\'ve guessed it</string>
    <string name="from">from</string>
    <string name="demo_total_games_played_xxx">Demo Total games played: xxx</string>
    <string name="total_games_played">Total games played:</string>
    <string name="all_right">All right. I picked another number. Let\'s see if you can guess it. Remember is a number from 1 to</string>
    <string name="demo_elapsed_time_00_00">Demo Elapsed time 00:00</string>
    <string name="elapsed_time">Elapsed time:</string>
    <string name="how_to_play"><u>How to play</u></string>
    <string name="how_to_play2">How to play</string>
    <string name="ok">OK</string>
    <string name="content_how_to_play">The game flow is very simple. Mister Robot chooses a random
        number and you have to guess it. You will receive small hints on every number that you
        submit. Of course, depending on your game mode Mister Robot can choose a number specific
        to that criteria.
    \n\nFor <b>EASY</b> he will choose a number from 1 to 100 (inclusive)
    \n\nFor <b>MEDIUM</b> he will choose a number from 1 to 1000 (inclusive)
    \n\nFor <b>HARD</b> he will choose a number from 1 to 10000 (inclusive)</string>
    <string name="tips_and_tricks"><u>Tips and Tricks</u></string>
    <string name="content_tips_and_tricks"><b>Tapping</b> on Mister Robot dialog will display all the
        text instantly without having to wait to finish the animation.
    \n\n<b>Tapping</b> on the box where your number is displayed will erase the number that is already
        typed there.
        \n\n<b>See Attempts</b> can help you by showing what numbers you already tried.
    \n\nThe <b>elapsed</b> time starts only when Mister Robot finish his talking.</string>
    <string name="question_mark">\?</string>
    <string name="see_attempts"><u>See Attempts</u></string>
    <string name="your_current_attempts"><u>Current game attempts</u></string>
    <string name="you_tried">You tried:</string>
    <string name="succcessfully">( SUCCESSFULLY )</string>
    <string name="unsuccessfully">( unsuccessfully )</string>
    <string name="there_are_no_attempts_to_display">There are no attempts to display.</string>
    <string name="total_attempts">Total attempts:</string>
</resources>
