<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundal_image"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PlayingActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="w,2:4"
            app:layout_constraintEnd_toStartOf="@+id/textview_robot_message"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textview_show_gamemode"
            app:srcCompat="@drawable/robot_playing" />

        <TextView
            android:id="@+id/textview_robot_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/demo_dialog_text_text_text"
            android:textColor="@color/dark_brown"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space_16" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space_16" />

        <LinearLayout
            android:id="@+id/linearlayout_buttons"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:visibility="visible">

            <Button
                android:id="@+id/button_yes_i_can"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/space_8"
                android:layout_weight="1"
                android:background="@drawable/fundal_button"
                android:paddingStart="@dimen/space_8"
                android:paddingEnd="@dimen/space_8"
                android:text="@string/yes_i_can"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="667dp" />

            <Button
                android:id="@+id/button_no_i_cant"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/space_8"
                android:layout_weight="1"
                android:background="@drawable/fundal_button"
                android:paddingStart="@dimen/space_8"
                android:paddingEnd="@dimen/space_8"
                android:text="@string/no_i_cant"
                android:textStyle="italic"
                tools:layout_editor_absoluteX="204dp"
                tools:layout_editor_absoluteY="619dp" />


        </LinearLayout>

        <Button
            android:id="@+id/button_num1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_num2"
            app:layout_constraintEnd_toStartOf="@+id/button_num2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_num0"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_2"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_num3"
            app:layout_constraintEnd_toStartOf="@+id/button_num3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_num1"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_3"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_num4"
            app:layout_constraintEnd_toStartOf="@+id/button_num4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_num2"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num0"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_num1"
            app:layout_constraintEnd_toStartOf="@+id/button_num1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_4"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_num3"
            app:layout_constraintTop_toBottomOf="@+id/textview_attempts"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num6"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_6"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_num7"
            app:layout_constraintEnd_toStartOf="@+id/button_num7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_num5"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num8"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_8"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_num9"
            app:layout_constraintEnd_toStartOf="@+id/button_num9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_num7"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num5"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_5"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_num6"
            app:layout_constraintEnd_toStartOf="@+id/button_num6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num7"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_7"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_num8"
            app:layout_constraintEnd_toStartOf="@+id/button_num8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_num6"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_num9"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/fundal_button"
            android:gravity="center"
            android:text="@string/_9"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_num8"
            app:layout_constraintTop_toBottomOf="@+id/button_num4"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textview_player_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/only_border"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:textSize="@dimen/size_22"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/button_num4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_num0"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_buttons"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_backspace"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/fundal_button"
            android:text="@string/backspace_unicode"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_guess"
            app:layout_constraintEnd_toStartOf="@+id/button_guess"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/button_num5"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_guess"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/fundal_button"
            android:text="@string/guess"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_num9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_backspace"
            app:layout_constraintTop_toBottomOf="@+id/button_num9"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textview_attempts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/demo_attempts_0"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textview_player_number"
            app:layout_constraintTop_toBottomOf="@+id/textview_player_number"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textview_show_gamemode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_4"
            android:gravity="center"
            android:text="@string/demo_show_gamemode"
            app:layout_constraintBaseline_toBaselineOf="@+id/textview_current_games_played"
            app:layout_constraintEnd_toStartOf="@+id/textview_current_games_played"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/textview_current_games_played"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/demo_current_games_played_demo"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_show_gamemode"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_one_more_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/fundal_button"
            android:text="@string/one_more_time"
            android:textStyle="bold|italic"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textview_player_number"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textview_player_number"
            app:layout_constraintTop_toBottomOf="@+id/textview_attempts"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_go_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fundal_button"
            android:text="@string/go_back"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textview_player_number"
            app:layout_constraintStart_toStartOf="@+id/textview_player_number"
            app:layout_constraintTop_toBottomOf="@+id/button_one_more_time"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textview_elapsed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/demo_elapsed_time_00_00"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/textview_attempts"
            app:layout_constraintStart_toStartOf="@+id/textview_player_number"
            tools:visibility="visible" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>


